BUGFIX: Weird z-index bug

--- a/src/angular-ui-query-builder.css
+++ b/src/angular-ui-query-builder.css
@@ -68,7 +68,6 @@
 .ui-query-builder .btn.btn-4
 {
 	color: #FFF;
-	z-index: 1;
 	min-height: 33px;
 }
 
